<package format="3">
  <name>ur3_control</name>
  <version>0.0.1</version>
  <description>UR3 Control with MoveIt and ROS2</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>